# adbc-rs

./: .gitignore  Cargo.toml  README.md  build.rs
core/: Cargo.toml
core/src/: driver_exporter.rs  driver_manager.rs  error.rs  lib.rs  options.rs  schemas.rs
core/src/ffi/: constants.rs  methods.rs  mod.rs  types.rs
core/tests/: driver_manager_postgresql.rs  driver_manager_sqlite.rs
core/tests/common/: mod.rs
drivers/dummy/src/: lib.rs
drivers/dummy/tests/: driver_exporter_dummy.rs
src/: driver_exporter.rs  driver_manager.rs  dummy.rs  error.rs  lib.rs  options.rs  schemas.rs
src/ffi/: constants.rs  functions.rs  methods.rs  mod.rs  types.rs
tests/: driver_exporter_dummy.rs  driver_manager.rs  driver_manager_postgresql.rs  driver_manager_sqlite.rs  dummy.rs
tests/common/: mod.rs
