[package]
name = "adbc-rs"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Crayssac <alexandre@crayssac.net>"]
license = "Apache-2.0"

[dependencies]
arrow = { version = "51.0.0", default-features = false, features = ["ffi"] }
libloading = "0.8"
once_cell = "1.19.0"

[lib]
crate-type = ["lib", "cdylib"]
