[package]
name = "adbc_core"
description = "Public abstract API, driver manager and driver exporter"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
arrow = { workspace = true }
libloading = { version = "0.8", optional = true }
once_cell = "1.19.0"

[features]
driver_manager = ["dep:libloading"]
